crates/ruma-common/tests/events/ui/08-enum-invalid-path.stderr
error[E0433]: failed to resolve: could not find `not` in `events`
 --> tests/events/ui/08-enum-invalid-path.rs:5:9
  |
5 |         "m.not.a.path",
  |         ^^^^^^^^^^^^^^ could not find `not` in `events`
